name:                run-length
version:             0.1.0
build-type:          Simple
cabal-version:       >= 1.10


library
  hs-source-dirs:      src
  exposed-modules:     RunLength
  build-depends:       base >= 4.8 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010


test-suite examples
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            examples.hs
  build-depends:      base
                    , doctest >= 0.10
  ghc-options:        -Wall
  default-language:   Haskell2010


test-suite hints
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            hints.hs
  build-depends:      base
                    , hlint >= 1.9
  default-language:   Haskell2010


test-suite properties
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            properties.hs
  build-depends:      base
                    , run-length
                    , QuickCheck >= 2.8
  ghc-options:        -Wall
  default-language:   Haskell2010


test-suite specs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             specs.hs
  build-depends:       base
                     , run-length
                     , hspec >= 2.2
  ghc-options:         -Wall
  default-language:    Haskell2010
